Changement page principale

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 			<h5>Bonjour, moi c'est Maxime</h5>
 			<p>Et je suis développeur FullStack</p>
 		</div>
-	</div>
-
-	<div>
-		
+		<div class="divVisite center-align">
+			<div class="startVisite z-depth-5">
+				<p>Commencer la visite</p>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
